# fa-subset

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/fa_subset/: __init__.py  __main__.py  downloader.py  fa_extractor.py  input_reader.py  zip_extractor.py
tests/: conftest.py  test_cli.py  test_downloader.py  test_fa_extractor.py  test_read_txt.py  test_zip_extractor.py
tests/data/: test_glyphs.txt
